# copliot-workspace

./: .editorconfig  .gitignore  .markdownlint.json  AGENTS.md  README.md  agr.toml  pyproject.toml
.codex/: config.toml
.github/: pull_request_template.md
agents/: rewriter.agent.md
prompts/: create-custom-unit-testing-skill.prompt.md  create-java-junit5-skill.prompt.md  create-py-unittest-skill.prompt.md  create-python-unittest-skill.prompt.md
prompts/testing/: create-custom-unit-testing-skill.prompt.md
scripts/: session_env.sh
skills/analyze/: SKILL.md
skills/analyze-reqs/: SKILL.md
skills/analyze-words/: SKILL.md
skills/analyzing-words/: SKILL.md
skills/architect/: SKILL.md
skills/architecture-design/: SKILL.md
skills/clarify/: SKILL.md
skills/code-analysis/: SKILL.md
skills/code-review/: SKILL.md
skills/code-review/references/: review-checklist.md
skills/code-simplifier/: SKILL.md
skills/create-pull-request/: SKILL.md
skills/create-py-unit-tests/: SKILL.md
skills/creating-pull-request/: SKILL.md
skills/creating-unit-testing-skills/: SKILL.md
skills/dba/: SKILL.md
skills/dba/evals/: evals.json
skills/dba/references/: dba-checklist.md  migration-safety.md  query-performance.md
skills/decompose/: SKILL.md
skills/decompose/evals/: evals.json
skills/decompose/references/: output-template.md  task-shapes.md
skills/develop/: SKILL.md
skills/develop-features/: SKILL.md
skills/develop-features/evals/: evals.json
skills/develop/evals/: evals.json
skills/developing-feature/: SKILL.md
skills/email-assistant/: SKILL.md
skills/execution-planner/: SKILL.md
skills/execution-planner/evals/: evals.json
skills/execution-planner/references/: task-shapes.md
skills/explain-words/: SKILL.md
skills/feature-dev/: SKILL.md
skills/git-commit-and-push/: SKILL.md
skills/git-workflow/: SKILL.md
skills/git-workflow/references/: cherry-pick-and-push.md  clean-branch.md  commit-and-push.md  create-branch.md  create-pull-request.md
skills/git-workflow/scripts/: pull_request.py
skills/java-junit5/: SKILL.md
skills/link-builder/: SKILL.md
skills/normalize-links/: SKILL.md
skills/normalizing-links/: SKILL.md
skills/pr-creator/: SKILL.md
skills/py-unittests/: SKILL.md
skills/quickstart/: SKILL.md
skills/react-vitest/: SKILL.md
skills/requirement-analysis/: SKILL.md
skills/requirement-analysis/references/: code-analysis.md
skills/rewrite/: SKILL.md
skills/rewrite-user-ask/: SKILL.md
skills/rewrite-user-ask/evals/: evals.json
skills/tdd/: SKILL.md
skills/tdd/references/: testing-anti-patterns.md
skills/test-driven-development/: SKILL.md
skills/unit-testing-skill-creator/: SKILL.md
skills/web-design-guidelines/: SKILL.md
(+3 files in other folders)
