[project]
name = "copilot-workspace"
version = "1.0.0"
requires-python = ">=3.12"
description = "A personal workspace for building, testing, and organizing custom GitHub Copilot agents, reusable skills, and MCP-related tooling."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "xbhel", email = "xbhel@outlook.com" }]
dependencies = [
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.8.0",
]

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
show-fixes = true
output-format = "full"
include = ["skills/**/scripts/**/*.py"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ARG",   # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle errors
    "EM",    # flake8-errmsg
    "EXE",   # flake8-executable
    "F",     # pyflakes
    "FA",    # flake8-future-annotations
    "FLY",   # flynt
    "FURB",  # refurb
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "INT",   # flake8-gettext
    "ISC",   # implicit-str-concat
    "LOG",   # flake8-logging
    "N",     # pep8-naming
    "PERF",  # perflint
    "PGH",   # pygrep-hooks
    "PIE",   # flake8-pie
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "RUF",   # Ruff-specific lints
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "TC",   # flake8-type-checking
    "TID",   # ban relative imports
    "TRY",   # tryceratops
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
    "YTT",   # flake8-2020
]
ignore = [
    "ANN001", # missing type annotation for 'self' in method
    "B028",   # No explicit `stacklevel` keyword argument found
    "COM812", # ignore when using ruff-format
    "G004",   # Logging statement uses f-string
    "ISC001", # ignore when using ruff-format
    "N818",   # Exception name should be named with an Error suffix
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "S404",   # `subprocess` module is possibly insecure
    "EM101",  # Flags string literals directly in exceptions
    "EM102",  # Flags f-string literals used in exception constructors
    "TRY003", # Flags avoid specifying long messages outside the exception class
]

[tool.mypy]
strict = true
pretty = true
show_error_codes = true
warn_unreachable = false
no_implicit_reexport = true
files = ["skills"]
exclude = "(?x)(^skills/skill-creator/scripts/.*$ | ^(?!skills/.*/scripts/).*$)"
